--- a/public/css/main.css
+++ b/public/css/main.css
@@ -64,6 +64,7 @@ h1 {
     justify-content: center;
     align-items: flex-start;
     margin-bottom: 25px;
+    flex-wrap: wrap;
 }
 
 .card {
@@ -77,6 +78,7 @@ h1 {
     flex-direction: row;
     justify-content: center;
     margin: 0 15px;
+    margin-top: 10px;
     height: 153px;
 }
 
@@ -108,6 +110,7 @@ h1 {
 .action-section-row {
     display: flex;
     padding: 5px;
+    flex-wrap: wrap;
 }
 
 .cards-duo-wrapper {
@@ -115,6 +118,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     margin: 0 15px;
+    margin-top: 10px;
 }
 
 .cards-duo {
@@ -140,4 +144,5 @@ h1 {
     border-radius: 5px;
     margin: 0 15px;
     color: #333;
+    margin-top: 10px;
 }
