--- a/public/css/main.css
+++ b/public/css/main.css
@@ -146,3 +146,33 @@ h1 {
     color: #333;
     margin-top: 10px;
 }
+
+/*
+    VARIANT 2
+*/
+table {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
+
+table tr:first-child {
+    background-color:  #396C52;
+}
+
+th {
+    min-width: 100px;
+}
+
+td {
+    text-align: center;
+}
+
+.cards-spacer {
+    align-self: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-weight: bold;
+    font-size: 14pt;
+    min-width: 15px;
+}
